# music-generator

./: .coverage  .coveragerc  .env  .gitignore  .pylintrc  README.md  d_088a8d6bd86b9783___init___py.html  d_088a8d6bd86b9783_markov_player_py.html  d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_test_markov_chain_py.html  d_08b4cb1648a15a99_test_trie_py.html  d_145eef247bfb46b6_main_py.html  d_82418d948afc0f37___init___py.html  d_82418d948afc0f37_trie_py.html  d_e0ce1d6ecae3dc67___init___py.html  d_e0ce1d6ecae3dc67_ui_py.html  d_e4162dd5075fabd0___init___py.html  d_e4162dd5075fabd0_markov_py.html  index.html  notes.md  pyproject.toml  status.json  tasks.py  trigger_push_html_cov.sh  trigger_push_htmlcov.sh
Documentation/: Design_document.md  Implementation-document.md  Specification-document.md  Test-documentation.md  Test_documentation.md  Testing-document.md  Untitled Diagram.drawio  Weekly_reports.md
htmlcov/: .coverage  .gitignore  d_088a8d6bd86b9783___init___py.html  d_088a8d6bd86b9783_markov_player_py.html  d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_test_markov_chain_py.html  d_08b4cb1648a15a99_test_trie_py.html  d_145eef247bfb46b6_main_py.html  d_82418d948afc0f37___init___py.html  d_82418d948afc0f37_trie_py.html  d_e0ce1d6ecae3dc67___init___py.html  d_e0ce1d6ecae3dc67_ui_py.html  d_e4162dd5075fabd0___init___py.html  d_e4162dd5075fabd0_markov_py.html  index.html
midi-handler/: midi-handler.py
src/: main.py
src/markov_chain/: markov.py  markov_chain.py
src/markov_player/: markov_player.py
src/midi_handler/: midi_handler.py
(+5 files in other folders)
